Lists and anchor tags

--- a/index.html
+++ b/index.html
@@ -4,67 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cohort5</title>
+    <link rel="icon" href="img/heart.jpeg" type="image/x-icon">
+    <title>CodeQueen</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to CodeQueen Digital Platform</h1>
+        <nav>
+             <a href="about.html">About</a>
+        </nav>
     </header>
-
-    <main>
-        <p>
-            <h5>Post1</h5>
-             This is our first page
-             Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!
-        </p>
-        <p>
-            <h5>Post2</h5>
-             This is our first page
-             Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!
-        </p>
-        <p>
-            <h5>Post3</h5>
-             This is our first page
-             Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!
-        </p>
-        <p>
-            <h5>Post4</h5>
-             This is our first page
-             Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!
-        </p>
-        <p>
-            <h5>Post5</h5>
-             This is our first page
-             Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> 
-             Ut asperiores nulla facere architecto,<br> assumenda ea reprehenderit quasi voluptatem minima. 
-             Laudantium odio ut molestias!
-        </p>
-        <article>
-            <h5>Sample Article</h5>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos odio ad sapiente?
-        </article>
-        </main>
-    
+    <h1>Welcome to Code Queen</h1>
+    <p>
+        We are excited to have you learn with us.
+    </p>
     <footer>
-        <p>&copy; Cohort5 - Code Queen 2021</p>
+        <p>&copy; Code Queen 2021</p>
     </footer>
 </body>
-</html> 
+</html>
