--- a/index.html
+++ b/index.html
@@ -66,5 +66,10 @@
     <footer>
         <p>&copy; Cohort5 - Code Queen 2021</p>
     </footer>
+    <!--<script>
+        alert("Hello")
+        console.log("Hello")
+    </script> -->
+    <script src="js/intro.js"></script>
 </body>
 </html> 
